--- a/remote-uci/wix/main.wxs
+++ b/remote-uci/wix/main.wxs
@@ -156,7 +156,9 @@
 				<Shortcut Id="ApplicationStartMenuShortcut" 
 						  Name="External engine for lichess.org"
 						  Description="Register external UCI engine for analysis on lichess.org"
-						  Target="[URL]"/>
+						  Target="[URL]">
+				    <Icon Id='ShortcutICO' SourceFile='wix\Product.ico'/>
+				</Shortcut>
 				<RemoveFolder Id="CleanUpShortCut" Directory="ApplicationProgramsFolder" On="uninstall"/>
 				<RegistryValue Root="HKCU" Key="Software\Lichess\ExternalEngine" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
 			</Component>
