windows ci: build all the stockfishes

--- a/remote-uci-service/wix/main.wxs
+++ b/remote-uci-service/wix/main.wxs
@@ -112,6 +112,14 @@
                         <File Id='LicenseFile' Name='ChangeMe' DiskId='1' Source='C:\Path\To\File' KeyPath='yes'/>
                     </Component>
                     -->
+    <Component Id='nnue' Guid='*'>
+      <File
+        Id='nnue'
+        Name='nn-6877cd24400e.nnue'
+        DiskId='1'
+        Source='wix\nn-6877cd24400e.nnue'
+        KeyPath='yes'/>
+    </Component>
     <Component Id='stockfish_x86_64' Guid='*'>
       <File
         Id='stockfish_x86_64'
@@ -120,12 +128,60 @@
         Source='wix\stockfish-x86-64.exe'
         KeyPath='yes'/>
     </Component>
+    <Component Id='stockfish_x86_64_sse3_popcnt' Guid='*'>
+      <File
+        Id='stockfish_x86_64_sse3_popcnt'
+        Name='stockfish-x86-64-sse3-popcnt.exe'
+        DiskId='1'
+        Source='wix\stockfish-x86-64-sse3-popcnt.exe'
+        KeyPath='yes'/>
+    </Component>
+    <Component Id='stockfish_x86_64_ssse3' Guid='*'>
+      <File
+        Id='stockfish_x86_64_ssse3'
+        Name='stockfish-x86-64-ssse3.exe'
+        DiskId='1'
+        Source='wix\stockfish-x86-64-ssse3.exe'
+        KeyPath='yes'/>
+    </Component>
+    <Component Id='stockfish_x86_64_sse41_popcnt' Guid='*'>
+      <File
+        Id='stockfish_x86_64_sse41_popcnt'
+        Name='stockfish-x86-64-sse41-popcnt.exe'
+        DiskId='1'
+        Source='wix\stockfish-x86-64-sse41-popcnt.exe'
+        KeyPath='yes'/>
+    </Component>
+    <Component Id='stockfish_x86_64_avx2' Guid='*'>
+      <File
+        Id='stockfish_x86_64_avx2'
+        Name='stockfish-x86-64-avx2.exe'
+        DiskId='1'
+        Source='wix\stockfish-x86-64-avx2.exe'
+        KeyPath='yes'/>
+    </Component>
     <Component Id='stockfish_x86_64_bmi2' Guid='*'>
       <File
         Id='stockfish_x86_64_bmi2'
         Name='stockfish-x86-64-bmi2.exe'
         DiskId='1'
         Source='wix\stockfish-x86-64-bmi2.exe'
+        KeyPath='yes'/>
+    </Component>
+    <Component Id='stockfish_x86_64_avx512' Guid='*'>
+      <File
+        Id='stockfish_x86_64_avx512'
+        Name='stockfish-x86-64-avx512.exe'
+        DiskId='1'
+        Source='wix\stockfish-x86-64-avx512.exe'
+        KeyPath='yes'/>
+    </Component>
+    <Component Id='stockfish_x86_64_vnni512' Guid='*'>
+      <File
+        Id='stockfish_x86_64_vnni512'
+        Name='stockfish-x86-64-vnni512.exe'
+        DiskId='1'
+        Source='wix\stockfish-x86-64-vnni512.exe'
         KeyPath='yes'/>
     </Component>
                         <Component Id='remote_uci' Guid='*'>
@@ -142,7 +198,7 @@
 								Start='auto'
 								Type='ownProcess'
 								Vital='yes'
-								Arguments='--secret-file remote-uci.secret --engine "[#stockfish_x86_64]" --engine-x86-64-bmi2 "[#stockfish_x86_64_bmi2]"'
+        Arguments='--secret-file remote-uci.secret --engine "[#stockfish_x86_64]" --engine-x86-64-sse3-popcnt "[#stockfish_x86_64_sse3_popcnt]" --engine-x86-64-ssse3 "[#stockfish_x86_64_ssse3]" --engine-x86-64-sse41-popcnt "[#stockfish_x86_64_sse41_popcnt]" --engine-x86-64-avx2 "[#stockfish_x86_64_avx2]" --engine-x86-64-bmi2 "[#stockfish_x86_64_bmi2]" --engine-x86-64-avx512 "[#stockfish_x86_64_avx512]" --engine-x86-64-vnni512 "[#stockfish_x86_64_vnni512]"'
 								Description='External UCI engine provider for lichess.org'/>
 							<ServiceControl
 								Id='startService'
@@ -188,10 +244,18 @@
             -->
             <!--<ComponentRef Id='License'/>-->
 
-			<ComponentRef Id='stockfish'/>
-            <ComponentRef Id='remote_uci'/>
-			<ComponentRef Id='ApplicationShortcut'/>
-        </Feature>
+      <ComponentRef Id='nnue'/>
+      <ComponentRef Id='stockfish_x86_64'/>
+      <ComponentRef Id='stockfish_x86_64_sse3_popcnt'/>
+      <ComponentRef Id='stockfish_x86_64_ssse3'/>
+      <ComponentRef Id='stockfish_x86_64_sse41_popcnt'/>
+      <ComponentRef Id='stockfish_x86_64_avx2'/>
+      <ComponentRef Id='stockfish_x86_64_bmi2'/>
+      <ComponentRef Id='stockfish_x86_64_avx512'/>
+      <ComponentRef Id='stockfish_x86_64_vnni512'/>
+      <ComponentRef Id='remote_uci'/>
+      <ComponentRef Id='ApplicationShortcut'/>
+    </Feature>
 
         <SetProperty Id='ARPINSTALLLOCATION' Value='[APPLICATIONFOLDER]' After='CostFinalize'/>
 
